# kristall

./: .gitignore  Cargo.toml  perf.data
res/shader/: geometry.vert
src/: main.rs  state.rs
src/backend/: mod.rs
src/backend/graphics/: camera.rs  mod.rs  model.rs  model_view.rs  proj.rs  texture.rs  transform.rs  uniform.rs
src/backend/graphics/ui/: text.rs
src/backend/input/: camera.rs  entity.rs  mod.rs
src/util/wgpu/: camera.rs  mod.rs  model.rs  old_code  uniform.rs
src/world/: mod.rs
src/world/entity/: builder.rs  mod.rs
src/world/entity/component/: camera.rs  controller.rs  mod.rs  model.rs  rigid_body.rs  transform.rs
src/world/entity/prefab/: car.rs  cube.rs  mod.rs  player.rs  rand_tile.rs
src/world/system/: gravity.rs  input.rs  integrate.rs  mod.rs  translate.rs
